# FermiSimplex

./: .gitignore  CMakeLists.txt  README.md  environment.yml  pixi.toml  pyproject.toml  tmp_lapack_zheevd_bench.cpp
artifacts/: fermi_surface_50_pretty_summary.json  fermi_surface_60_signed_inertia_first_safe_sweep.json  fermi_surface_60_signed_inertia_summary.json  fermi_surface_60_summary.json
benchmarks/: fermi_surface_60.py
cpp/: CMakeLists.txt
cpp/cmake/: fermisimplex-config.cmake.in  lineartetrahedron-config.cmake.in
cpp/include/fermisimplex/: certification.h  fermi_surface.h  fermisimplex.h  hamiltonian.h  integration.h  spectral_mesh.h
cpp/include/lineartetrahedron/: adaptive_estimate.h  band_weights.h  certification.h  charge.h  charge_integrand.h  density.h  density_integrand.h  fermi_surface.h  hamiltonian.h  integration.h  integration_state.h  integration_workspace.h  linalg.h  lineartetrahedron.h  runtime.h  signed_inertia.h  simplex_certificate.h  simplex_rules.h  spectral_mesh.h  tight_binding.h  types.h  vertex_spectra.h  weyl.h
cpp/src/: band_weights.cpp  bindings.cpp  charge.cpp  charge_integrand.cpp  density.cpp  density_integrand.cpp  fermi_surface.cpp  integration_state.cpp  integration_workspace.cpp  linalg.cpp  runtime.cpp  simplex_certificate.cpp  simplex_rules.cpp  tight_binding.cpp  types.cpp  vertex_spectra.cpp
cpp/src/bindings/: arrays.h  bindings.h  fermi_surface.cpp  tight_binding.cpp
cpp/src/certificate/: blas.cpp  blocks.cpp  common_subspace.cpp  gap_bound.cpp  internal.h  lanczos.cpp  rotated_blocks.cpp  rotated_vertex.cpp  simplex_certificate.cpp  simplex_certificate.h
cpp/src/certificate/bounds/: mu_bounds.cpp  mu_bounds.h  occupation_bounds.cpp  occupation_bounds.h
cpp/src/certificate/linalg/: cholesky.cpp  cholesky.h  lapack.cpp  lapack.h  matrix.h  rotated_blocks.cpp  rotated_blocks.h
cpp/src/certificate/simplex/: anchor_selection.cpp  anchor_selection.h  occupation_certificate.cpp  occupation_certificate.h  simplex_blocks.cpp  simplex_blocks.h  vertex_blocks.cpp  vertex_blocks.h
cpp/src/certification/: mesh_certificate.h  simplex_certificate.cpp
cpp/src/certification/bounds/: mu_bounds.cpp  mu_bounds.h  occupation_bounds.cpp  occupation_bounds.h
cpp/src/certification/linalg/: cholesky.cpp  cholesky.h  matrix.h  rotated_blocks.cpp  rotated_blocks.h
cpp/src/certification/simplex/: anchor_selection.cpp  anchor_selection.h  occupation_certificate.cpp  occupation_certificate.h  simplex_blocks.cpp  simplex_blocks.h  vertex_blocks.cpp  vertex_blocks.h
cpp/src/core/: linear_algebra.cpp  linear_algebra.h  simplex_geometry.h  spectral_mesh.cpp  tight_binding.cpp  tight_binding.h  types.h  vertex_spectra.cpp  vertex_spectra.h
cpp/src/fermi_surface/: adaptive_refinement.cpp  adaptive_refinement.h  api.cpp  extraction.cpp  fermi_surface.cpp  fermi_surface.h  internal.h  run.cpp  simplex_classification.cpp  simplex_classification.h  surface_extraction.cpp  surface_extraction.h  surface_triangulation.cpp  surface_triangulation.h  vertex_evaluation.cpp  vertex_evaluation.h
cpp/src/integration/: charge.cpp  charge.h  charge_certificate_cache.cpp  charge_certificate_cache.h  charge_runtime.cpp  density.cpp  density.h  integration.cpp  projected_error.cpp  projected_error.h  runtime.cpp  runtime.h  workspace.cpp  workspace.h
cpp/src/linalg/: blas.cpp  blas_lapack.h  lapack.cpp
cpp/tests/: test_certificate_validation.cpp  test_charge_certificates.cpp  test_common_subspace_bounds.cpp  test_helpers.h  test_occupation_bounds.cpp  test_projected_error.cpp  test_simplex_certificate.cpp  test_spectral_mesh.cpp
cpp/tests/package_consumer/: CMakeLists.txt  main.cpp  verify.cmake
cpp/tools/: benchmark_common_subspace_bounds.cpp  benchmark_occupation_bounds.cpp  benchmark_performance.cpp
docs/: development.md  mathematics.md  performance.md  visuals.md
docs/tools/: generate_readme_assets.py
examples/: fermi_surface.py  quick_start.py
experiments/: random_bz_certify.py  sign_block_vs_weyl.py
experiments/projected_error/: README.md  ablation.cpp
lineartetrahedron/: __init__.py  backend.py  results.py  solve.py
python/: CMakeLists.txt
python/fermisimplex/: __init__.py  certification.py  hamiltonian.py  mesh.py
python/lineartetrahedron/: __init__.py  backend.py  hamiltonian.py
python/src/bindings/: arrays.h  bindings.h  certificate.cpp  certification.cpp  energy_bound.cpp  energy_bound.h  fermi_surface.cpp  integration.cpp  integration_types.cpp  module.cpp  python_hamiltonian.cpp  python_hamiltonian.h  spectral_mesh.cpp  tight_binding.cpp
scripts/: benchmark_fermi_surface_60.py  example_fermi_surface_plot.py
tests/: conftest.py  helpers.py  test_backend.py  test_certification.py  test_charge.py  test_fermi_surface.py  test_hamiltonian.py  test_integration.py
