[build-system]
requires = [
    "cmake>=3.25",
    "nanobind>=2.2",
    "ninja>=1.11",
    "scikit-build-core>=0.10",
]
build-backend = "scikit_build_core.build"

[project]
name = "lineartetrahedron"
version = "0.1.0"
description = "Zero-temperature linear tetrahedron backend for MeanFi"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
]

[project.optional-dependencies]
examples = [
    "matplotlib>=3.8",
]

[tool.scikit-build]
wheel.packages = ["lineartetrahedron"]
cmake.source-dir = "."

[tool.pytest.ini_options]
testpaths = ["tests"]
